# sotor

./: .eslintrc  .eslintrc.cjs  .gitignore  .prettierrc.json  Cargo.toml  Cross.toml  README.md  Trunk.toml  build-all.sh  build.rs  index.html  package-lock.json  package.json  rust-toolchain  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: gh-pages.yml
assets/: sw.js
assets/k2/saves/000000 - QUICKSAVE/: globalvars.res  partytable.res  savenfo.res  screen.tga
core/: Cargo.toml
core/src/: lib.rs
core/src/formats/: mod.rs
core/src/formats/erf/: mod.rs  write.rs
core/src/formats/gff/: mod.rs  read.rs  write.rs
core/src/formats/key/: read.rs
core/src/formats/tlk/: read.rs
core/src/formats/twoda/: mod.rs  read.rs
core/src/game_data/: mod.rs  read.rs
core/src/util/: bytes.rs  fs.rs  mod.rs
internal/: Cargo.toml
internal/src/formats/: mod.rs
internal/src/formats/bif/: read.rs
internal/src/formats/erf/: mod.rs  read.rs  write.rs
internal/src/formats/gff/: mod.rs  read.rs  write.rs
internal/src/formats/key/: read.rs
internal/src/formats/tlk/: mod.rs  read.rs
internal/src/formats/twoda/: mod.rs  read.rs
internal/src/game_data/: mod.rs  read.rs
internal/src/util/: bytes.rs  fs.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
save/: globalvars.res  partytable.res  savenfo.res  screen.tga
src/: App.vue  main.rs  main.ts  store.ts  util.rs  vite-env.d.ts
src-front/: store.ts  vite-env.d.ts
src-front/components/: Editor.vue  EditorGeneral.vue
src-front/styles/: index.scss
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/formats/: resource_type.rs
src-tauri/macros/: .gitignore  Cargo.toml
src-tauri/macros/src/: lib.rs
src-tauri/save/: mod.rs  read.rs
src-tauri/src/: main copy.rs  main.rs
src-tauri/src/formats/: mod.rs
src-tauri/src/formats/erf/: read.rs  write.rs
src-tauri/src/save/: mod.rs  read.rs
src-tauri/src/util/: bytes.rs  mod.rs
src/components/: Editor.vue  EditorGeneral.vue  Greet.vue  SaveEditor.vue
src/components/elements/: Button.vue  Input.vue
src/formats/: mod.rs  resource_type.rs
src/formats/bif/: mod.rs  read.rs
src/formats/erf/: mod.rs  read.rs  write.rs
src/formats/gff/: mod.rs  read.rs  write.rs
src/formats/key/: mod.rs  read.rs
src/formats/tlk/: mod.rs  read.rs
src/formats/twoda/: mod.rs  read.rs
src/game_data/: mod.rs  read.rs
src/gff/: mod.rs  read.rs  write.rs
src/save/: mod.rs  read.rs  update.rs  write.rs
src/styles/: globals.scss
src/ui/: editor_general.rs  editor_globals.rs  editor_quests.rs  mod.rs  settings.rs  side_panel.rs  styles.rs  toasts.rs  widgets.rs
src/ui/editor/: area.rs  characters.rs  general.rs  globals.rs  inventory.rs  mod.rs  quests.rs
src/ui/editor/characters/: abilities.rs  equipment.rs  mod.rs  stats.rs
src/util/: bytes.rs  commands.ts  fs.rs  game_data.rs  index.ts  mod.rs  ui.rs
src/util/save/: mod.rs  read.rs
trunk/: manifest.json
