[package]
name = "sotor"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[workspace]
members = ["macros", "internal"]

[workspace.dependencies]
macros = { path = "./macros" }
internal = { path = "./internal" }
ahash = "0.8.7"
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"

[dependencies]
macros = { workspace = true }
internal = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rfd = { version = "0.12.1" }
image = { version = "0.24", default-features = false, features = ["tga"] }
fastrand = "2.0.1"
futures-lite = "2.1.0"
log = "0.4"
egui = "0.25"
eframe = { version = "0.25", default-features = false, features = [
    "persistence",
    "glow",
] }
emath = "0.25"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[build-dependencies]
internal = { workspace = true }
ahash = { workspace = true }
bincode = { workspace = true }
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3

[lints]
workspace = true

[workspace.lints.clippy]
pedantic = { priority = -1, level = "warn" }
ignored_unit_patterns = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
unnecessary_box_returns = "allow"            #seems to be bugged, triggers on enum definition and can't be overriden
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
