[package]
name = "sotor"
version = "1.0.5"
edition = "2021"
rust-version = "1.74"

[workspace]
members = ["macros", "core"]

[workspace.dependencies]
macros = { path = "./macros" }
core = { path = "./core" }
ahash = "0.8.7"
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
fastrand = "2.0.1"
zip = { version = "0.6.6", default-features = false }

[dependencies]
macros = { workspace = true }
core = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
fastrand = { workspace = true }
rfd = { version = "0.12.1" }
image = { version = "0.24", default-features = false, features = ["tga"] }
log = "0.4"
egui-toast = "0.11.0"
egui = "0.25"
eframe = { version = "0.25", default-features = false, features = [
    "persistence",
    "glow",
] }
emath = "0.25"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simplelog = "0.12.1"
zip = { workspace = true, features = ["bzip2"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4"
fastrand = { workspace = true, features = ["js"] }
zip = { workspace = true, features = ["deflate"] }

[build-dependencies]
core = { workspace = true }
ahash = { workspace = true }
bincode = { workspace = true }
zip = { workspace = true, features = ["deflate", "bzip2"] }
dotenv = "0.15"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3

[lints]
workspace = true

[workspace.lints.clippy]
pedantic = { priority = -1, level = "warn" }
ignored_unit_patterns = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
